[UPD] Finished md layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,69 @@
     <title>Bootstrap Layout</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <!-- inizio header -->
+    <header>
+        <div class="container text-center my-4">
+            <div class="row">
+                <div class="col">
+                    <h1>Bootstrap 5 Responsive Grid</h1>
+                    <p>Layout a griglia con diversi breakpoint (sm,md,lg)</p>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- fine header -->
+    <!-- inizio main -->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 bg-light col-md-6 p-md-3">
+                    <h2>Colonna 1</h2>
+                    <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
+                </div>
+                <div class="col-12 text-white bg-secondary col-md-6 p-md-3">
+                    <h2>Colonna 2</h2>
+                    <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
+                </div>
+            </div>
+            <!-- fine prime colonne -->
+             <!-- inizio seconde colonne -->
+                <div class="row pt-3">
+                    <div class="col-6 text-white bg-primary col-md-4 p-md-3">
+                        <h2>Colonna 1</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                    <div class="col-6 text-white bg-success col-md-4 p-md-3">
+                        <h2>Colonna 2</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                    <div class="col-12 text-white bg-danger col-md-4 p-md-3">
+                        <h2>Colonna 3</h2>
+                        <p>Larghezza intera su dispositivi piccoli (col-12), e un terzo su dispositivi medi e più grandi. </p>
+                    </div>
+                </div>
+                <!-- fine seconde colonne -->
+                 <!-- inizio terze colonne -->
+                  <div class="row pt-3">
+                    <div class="col-6 bg-info text-white col-md-3 p-md-3">
+                        <h2>Colonna 1</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                    <div class="col-6 bg-warning text-white col-md-3 p-md-3">
+                        <h2>Colonna 2</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                    <div class="col-6 bg-dark text-white col-md-3 p-md-3">
+                        <h2>Colonna 3</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                    <div class="col-6 col-md-3 p-md-3">
+                        <h2>Colonna 4</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                    <!-- fine terze colonne -->
+                  </div>
+        </div>
+    </main>
 </body>
 </html>
