--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-12 bg-light col-md-6 p-md-3">
+                <div class="col-12 bg-light col-md-6 p-md-3 col-lg-4">
                     <h2>Colonna 1</h2>
                     <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
                 </div>
-                <div class="col-12 text-white bg-secondary col-md-6 p-md-3">
+                <div class="col-12 text-white bg-secondary col-md-6 p-md-3 col-lg-8">
                     <h2>Colonna 2</h2>
                     <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
                 </div>
@@ -36,15 +36,15 @@
             <!-- fine prime colonne -->
              <!-- inizio seconde colonne -->
                 <div class="row pt-3">
-                    <div class="col-6 text-white bg-primary col-md-4 p-md-3">
+                    <div class="col-6 text-white bg-primary col-md-4 p-md-3 col-lg-4">
                         <h2>Colonna 1</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
-                    <div class="col-6 text-white bg-success col-md-4 p-md-3">
+                    <div class="col-6 text-white bg-success col-md-4 p-md-3 col-lg-4">
                         <h2>Colonna 2</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
-                    <div class="col-12 text-white bg-danger col-md-4 p-md-3">
+                    <div class="col-12 text-white bg-danger col-md-4 p-md-3 col-lg-4">
                         <h2>Colonna 3</h2>
                         <p>Larghezza intera su dispositivi piccoli (col-12), e un terzo su dispositivi medi e più grandi. </p>
                     </div>
@@ -52,19 +52,19 @@
                 <!-- fine seconde colonne -->
                  <!-- inizio terze colonne -->
                   <div class="row pt-3">
-                    <div class="col-6 bg-info text-white col-md-3 p-md-3">
+                    <div class="col-6 bg-info text-white col-md-3 p-md-3 col-lg-3">
                         <h2>Colonna 1</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
-                    <div class="col-6 bg-warning text-white col-md-3 p-md-3">
+                    <div class="col-6 bg-warning text-white col-md-3 p-md-3 col-lg-3">
                         <h2>Colonna 2</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
-                    <div class="col-6 bg-dark text-white col-md-3 p-md-3">
+                    <div class="col-6 bg-dark text-white col-md-3 p-md-3 col-lg-3">
                         <h2>Colonna 3</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
-                    <div class="col-6 col-md-3 p-md-3">
+                    <div class="col-6 col-md-3 p-md-3 col-lg-3">
                         <h2>Colonna 4</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
